# remotedesktop

./: .gitignore  CLAUDE.md  LICENSE  pyproject.toml  readme.md  run.bat  run_client.bat  run_server.bat
.github/workflows/: ci.yml  release.yml
scripts/: make_coverage_badge.py  make_installer.bat  make_venv.bat
src/remotedesktop/: __init__.py  __main__.py  about.py  app.py  autostart.py  client.py  clipboard.py  compat.py  config.py  cursor_shape.py  db.py  discovery.py  dxgi.py  frames.py  icon.py  input_injection.py  inventory.py  logs.py  modal_loop.py  performance.py  preferences.py  protocol.py  server.py  session_lock.py  sharing.py  single_instance.py  tls.py  viewer.py  visual_effects.py  window_state.py
tests/: conftest.py  test_about.py  test_autostart.py  test_client_window.py  test_clipboard.py  test_compat.py  test_config.py  test_cursor_shape.py  test_discovery.py  test_dxgi.py  test_frames.py  test_icon.py  test_input.py  test_input_injection.py  test_inventory.py  test_logs.py  test_main_window.py  test_modal_loop.py  test_performance.py  test_preferences.py  test_protocol.py  test_server_window.py  test_session_lock.py  test_sharing.py  test_sharing_tab.py  test_single_instance.py  test_smoke.py  test_tls.py  test_visual_effects.py  test_window_state.py
tools/: make_demo_gifs.py  make_icon.py
