[project]
name = "remotedesktop"
dynamic = ["version"]
description = "Remote desktop app for Windows computers on the same LAN, with autodiscovery. View other computers and optionally share this one — screen, keyboard, mouse, and clipboard, without RDP or Microsoft authentication."
readme = "readme.md"
license = "MIT"
authors = [{ name = "James Abel", email = "j@abel.co" }]
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]
dependencies = [
    "cryptography>=49.0.0",
    "platformdirs>=4.10.0",
    "pyside6>=6.11.1",
    "semver>=3.0",
]

[project.urls]
Homepage = "https://github.com/jamesabel/remotedesktop"
Repository = "https://github.com/jamesabel/remotedesktop"
PyPI = "https://pypi.org/project/remotedesktop/"

[project.gui-scripts]
remotedesktop = "remotedesktop.app:main"

[dependency-groups]
dev = [
    "pillow>=12.3.0",
    "pytest>=8",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/remotedesktop/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ty.environment]
# The app targets Windows (SendInput via ctypes.windll); type-check as such
# even when ty runs on a Linux CI runner.
python-platform = "win32"
